force-app/main/default/objects/OFAC_lookup_settings__c/OFAC_lookup_settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>NOTE: This has been retired; use OFAC search SDN instead.  Settings related to OFAC lookup</description>
    <label>OFAC lookup settings</label>
</CustomObject>