force-app/main/default/objects/OFAC_lookup_settings__c/fields/API_key__c.field-meta.xml
<CustomField>
    <fullName>API_key__c</fullName>
    <description>The api key to access the OFAC search web site</description>
    <inlineHelpText>The api key to access the OFAC search web site</inlineHelpText>
    <label>API key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>