force-app/main/default/objects/OFAC_lookup_settings__c/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <description>The base URL for performing an OFAC search</description>
    <inlineHelpText>The base URL for performing an OFAC search</inlineHelpText>
    <label>Base URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>