force-app/main/default/objects/OFAC_lookup_settings__c/fields/Batch_size__c.field-meta.xml
<CustomField>
    <fullName>Batch_size__c</fullName>
    <defaultValue>100</defaultValue>
    <description>The number of items in each batch of results from OFAC search</description>
    <inlineHelpText>The number of items in each batch of results from OFAC search</inlineHelpText>
    <label>Batch size</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>