force-app/main/default/objects/OFAC_lookup_settings__c/fields/Extra_parameters__c.field-meta.xml
<CustomField>
    <fullName>Extra_parameters__c</fullName>
    <description>Extra parameters to be added to the URL when performing an OFAC search (of the form &quot;&amp;param1=value1&amp;param2=value2...&quot;)</description>
    <inlineHelpText>Extra parameters to be added to the URL when performing an OFAC search (of the form &quot;&amp;param1=value1&amp;param2=value2...&quot;)</inlineHelpText>
    <label>Extra parameters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>