force-app/main/default/objects/OFAC_lookup_settings__c/fields/Max_batches__c.field-meta.xml
<CustomField>
    <fullName>Max_batches__c</fullName>
    <description>The maximum number of batches to return from OFAC search (and thus the max number of http callouts) - based on governor limits as of Spring 2016, should be no bigger than 100</description>
    <inlineHelpText>The maximum number of batches to return from OFAC search (and thus the max number of http callouts) - based on governor limits as of Spring 2016, should be no bigger than 100</inlineHelpText>
    <label>Max batches</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>