force-app/main/default/objects/OFAC_lookup_settings__c/fields/Max_status_for_prop_search__c.field-meta.xml
<CustomField>
    <fullName>Max_status_for_prop_search__c</fullName>
    <description>The upper bound for the range of statuses searched by OFAC lookup</description>
    <inlineHelpText>The upper bound for the range of statuses searched by OFAC lookup</inlineHelpText>
    <label>Max status for prop search</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>