force-app/main/default/objects/OFAC_lookup_settings__c/fields/Min_status_for_prop_search__c.field-meta.xml
<CustomField>
    <fullName>Min_status_for_prop_search__c</fullName>
    <description>The lower bound for the range of statuses searched by OFAC lookup</description>
    <inlineHelpText>The lower bound for the range of statuses searched by OFAC lookup</inlineHelpText>
    <label>Min status for prop search</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>