force-app/main/default/objects/OFAC_lookup_settings__c/fields/Recipient_email__c.field-meta.xml
<CustomField>
    <fullName>Recipient_email__c</fullName>
    <description>The email address(es) of folks who should receive notification of any hits at OFAC</description>
    <inlineHelpText>The email address(es) of folks who should receive notification of any hits at OFAC</inlineHelpText>
    <label>Recipient email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>