force-app/main/default/objects/OFAC_lookup_settings__c/fields/Sources__c.field-meta.xml
<CustomField>
    <fullName>Sources__c</fullName>
    <defaultValue>&quot;SDN&quot;</defaultValue>
    <description>The names of source lists for OFAC search to access</description>
    <inlineHelpText>The names of source lists for OFAC search to access</inlineHelpText>
    <label>Sources</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>